litmask/tests/compile/mask_include_str_missing_file.stderr
error: mask_include_str!: could not read `examples/fixtures/this_file_does_not_exist.txt`: No such file or directory (os error 2)
 --> tests/compile/mask_include_str_missing_file.rs:8:31
  |
8 |     let _ = mask_include_str!("examples/fixtures/this_file_does_not_exist.txt");
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
